--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,6 +39,9 @@
             android:layout_height="wrap_content"
             android:hint="@string/search_your_favourite_recipe"
             android:imeOptions="actionSearch"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
+            android:background="@drawable/edittext_background"
             android:inputType="text"
             android:drawablePadding="8dp"
             android:drawableStart="@drawable/ic_search"
