--- a/app/src/main/res/layout/item_recipe_horizontal.xml
+++ b/app/src/main/res/layout/item_recipe_horizontal.xml
@@ -34,7 +34,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:text="TextView"
-            android:textColor="@color/brown"
+            android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
