--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,10 +59,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
             android:layout_marginEnd="25dp"
+            android:background="@drawable/edittext_background"
             android:hint="@string/password"
-            android:textColor="@color/brown"
             android:inputType="textPassword"
-            android:background="@drawable/edittext_background"/>
+            android:textColor="@color/brown" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
@@ -147,13 +147,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="36dp"
         android:text="@string/login_as_guest"
         android:textColor="@color/brown"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.008"
         app:layout_constraintStart_toStartOf="@+id/et_password_container"
         app:layout_constraintTop_toBottomOf="@+id/et_password_container" />
+
+    <TextView
+        android:id="@+id/forgotpassword"
+        android:layout_width="160dp"
+        android:layout_height="27dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginBottom="304dp"
+        android:text="Forgot Password"
+        android:textColor="@color/brown"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.822"
+        app:layout_constraintStart_toEndOf="@+id/tv_guest"
+        app:layout_constraintTop_toBottomOf="@+id/et_password_container"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
