--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.FavouritesFragment">
+    tools:context=".FavouritesFragment">
 
     <TextView
         android:id="@+id/textView2"
@@ -37,7 +37,7 @@
         android:id="@+id/noFavourites"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:src="@drawable/empty"
+        android:src="@drawable/img_4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
