--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,24 +7,24 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.lastlastrecipe.fragment.HomeFragment"
+        android:name="com.example.lastlastrecipe.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_category"
-        android:name="com.example.lastlastrecipe.fragment.CategoriesFragment"
+        android:name="com.example.lastlastrecipe.CategoriesFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_category" />
 
     <fragment
         android:id="@+id/navigation_profile"
-        android:name="com.example.lastlastrecipe.fragment.ProfileFragment"
+        android:name="com.example.lastlastrecipe.ProfileFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_profile" />
     <fragment
         android:id="@+id/navigation_favorite"
-        android:name="com.example.lastlastrecipe.fragment.FavouritesFragment"
+        android:name="com.example.lastlastrecipe.FavouritesFragment"
         android:label="fragment_favourites"
         tools:layout="@layout/fragment_favourites" />
 </navigation>
