--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -8,6 +8,59 @@
     tools:context=".edit_profile"
     >
 
+    <EditText
+        android:id="@+id/Description"
+        android:layout_width="330dp"
+        android:layout_height="54dp"
+        android:background="@drawable/edittext_background"
+        android:ems="10"
+        android:hint=" Enter New Description"
+        android:inputType="text"
+        android:text=""
+        android:textColorHint="#A49584"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.423"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="595dp" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content"
+        android:text="New Description"
+        android:textColor="@color/brown"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.128"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="559dp" />
+
+    <TextView
+        android:id="@+id/textView9"
+        hin
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Retype Password"
+        android:text="Confirm New Password"
+        android:textColor="@color/brown"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.147"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="463dp" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Password"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.123"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="364dp" />
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView3"
         android:layout_width="117dp"
@@ -15,10 +68,11 @@
         android:src="@drawable/breakfast"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.056"
+        app:layout_constraintHorizontal_bias="0.054"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.049" />
+        app:layout_constraintVertical_bias="0.043" />
+
 
     <TextView
         android:id="@+id/textView4"
@@ -31,32 +85,108 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.093" />
+        app:layout_constraintVertical_bias="0.078" />
+
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textView"
         android:layout_width="196dp"
         android:layout_height="30dp"
+        android:layout_marginTop="48dp"
         android:text="Name"
         android:textColor="@color/brown"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="158dp" />
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.139"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <EditText
-        android:id="@+id/editTextText"
-        android:layout_width="248dp"
-        android:layout_height="39dp"
-        //android:background="ed"
+        android:id="@+id/editTextText11"
+        android:layout_width="330dp"
+        android:layout_height="46dp"
+        android:background="@drawable/edittext_background"
         android:ems="10"
+        android:hint=" Name"
         android:inputType="text"
         android:text=""
-        android:hint="Name"
+        android:textColorHint="#A49584"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.37"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="206dp" />
+
+    <EditText
+        android:id="@+id/editTextText2"
+        android:layout_width="329dp"
+        android:layout_height="46dp"
+        android:background="@drawable/edittext_background"
+        android:ems="10"
+        android:hint=" Name"
+        android:inputType="text"
+        android:text=""
+        android:textColorHint="#A49584"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.384"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="300dp" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Email"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.098"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="264dp" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="134dp"
+        android:layout_height="54dp"
+        android:text="Update"
+        android:background="@drawable/button_background"
+        tools:layout_editor_absoluteX="137dp"
+        tools:layout_editor_absoluteY="661dp" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Edit Profile"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="30dp"
+        tools:layout_editor_absoluteY="128dp" />
+
+    <EditText
+        android:id="@+id/editTextNumberPassword"
+        android:layout_width="327dp"
+        android:layout_height="41dp"
+        android:background="@drawable/edittext_background"
+        android:ems="10"
+        android:hint=" Enter New Password"
+
+        android:inputType="numberPassword"
+        android:textColorHint="#A49584"
         tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="208dp" />
+        tools:layout_editor_absoluteY="398dp" />
+
+    <EditText
+        android:id="@+id/editTextNumberPassword2"
+        android:layout_width="329dp"
+        android:layout_height="46dp"
+        android:background="@drawable/edittext_background"
+        android:ems="10"
+        android:hint=" Retype Password"
+        android:inputType="numberPassword"
+        android:textColorHint="#A49584"
+        tools:layout_editor_absoluteX="31dp"
+        tools:layout_editor_absoluteY="496dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
