--- a/app/src/main/res/layout/activity_recipe_new.xml
+++ b/app/src/main/res/layout/activity_recipe_new.xml
@@ -9,7 +9,8 @@
     <!-- Top Image and Video Play Button -->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/deltaRelative">
 
         <!-- Food Image -->
         <ImageView
