--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:text="@string/satisfy_your_ncravings_with_just_a_tap"
+        android:text="Curate your favorites from our delicious recipe collection!"
         android:textColor="@color/brown"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
