Induwara Layout Chnage 01

--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -8,9 +8,10 @@
 
     <ImageView
         android:id="@+id/img_recipe"
-        android:layout_width="0dp"
-        android:layout_height="220dp"
-        android:scaleType="centerCrop"
+        android:layout_width="317dp"
+        android:layout_height="164dp"
+        android:layout_marginTop="40dp"
+        android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,15 +22,42 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
         android:text="Recipe Title"
         android:textColor="#492C09"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/img_fvrt"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_recipe" />
+
+    <ImageView
+        android:id="@+id/img_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:padding="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_name"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/ic_edit"
+        app:tint="@color/black" />
+
+    <ImageView
+        android:id="@+id/img_fvrt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:padding="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_name"
+        app:layout_constraintEnd_toStartOf="@+id/img_edit"
+        app:layout_constraintTop_toTopOf="@+id/tv_name"
+        app:layout_constraintVertical_bias="0.125"
+        app:srcCompat="@drawable/ic_favourite"
+        app:tint="@color/black" />
 
     <TextView
         android:id="@+id/tc_category"
@@ -46,25 +74,16 @@
         android:id="@+id/tv_calories"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="20dp"
         android:text="120 Calories"
-        android:textStyle="italic"
         android:textColor="#492C09"
+        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="@+id/tc_category"
-        app:layout_constraintStart_toEndOf="@+id/tc_category"
-        app:layout_constraintTop_toTopOf="@+id/tc_category" />
-
-    <ImageView
-        android:id="@+id/img_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:padding="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_name"
-        app:srcCompat="@drawable/ic_edit"
-        app:tint="@color/black" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/tc_category"
+        app:layout_constraintTop_toTopOf="@+id/tc_category"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/tv_description"
@@ -81,18 +100,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tc_category" />
-
-    <ImageView
-        android:id="@+id/img_fvrt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:padding="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_name"
-        app:layout_constraintEnd_toStartOf="@+id/img_edit"
-        app:layout_constraintTop_toTopOf="@+id/tv_name"
-        app:srcCompat="@drawable/ic_favourite"
-        app:tint="@color/black" />
 
     <Button
         android:id="@+id/btn_delete"
